Style changes and additions (user only), fixes to login logic

--- a/app/admin.html
+++ b/app/admin.html
@@ -79,47 +79,46 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </a>
 
           <a data-route="a-overview-docent" href="/aoverviewd">
-            <iron-icon icon="info"></iron-icon>
+            <iron-icon icon="icons:view-headline"></iron-icon>
             <span>Dozenten Übersicht</span>
           </a>
 
           <a data-route="a-add-docent" href="/aaddd">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="social:person-add"></iron-icon>
             <span>Dozenten erstellen</span>
           </a>
 
           <a data-route="a-manage-docent" href="/amanaged">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="social:group"></iron-icon>
             <span>Dozenten verwalten</span>
           </a>
           </hr>
           <a data-route="a-create-room" href="/acreater">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="social:domain"></iron-icon>
             <span>Create rooms</span>
           </a>
           <a data-route="a-manage-room" href="/amanager">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="social:location-city"></iron-icon>
             <span>Manage rooms</span>
           </a>
           </hr>
           <a data-route="a-overview-appointments" href="/aoverviewa">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="icons:perm-contact-calendar"></iron-icon>
             <span>Sprechzeiten Übersicht</span>
           </a>
 
           <a data-route="a-manage-appointments" href="/amanagea">
-            <iron-icon icon="mail"></iron-icon>
+            <iron-icon icon="icons:today"></iron-icon>
             <span>Sprechzeiten verwalten
               <span>
           </a>
 
           </hr>
-          </hr>
-          <a data-route="a-manage-profil" href="/amanagep">
+          <!-- <a data-route="a-manage-profil" href="/amanagep">
             <iron-icon icon="mail"></iron-icon>
             <span>Profil verwalten
               <span>
-          </a>
+          </a> -->
           <a data-route="a-logout" onClick="javascript:Parse.User.logOut();">
             <iron-icon icon="exit-to-app"></iron-icon>
             <span>Logout
