--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -10,13 +10,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html">
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
-
-
+<link rel="import" href="../bower_components/iron-image/iron-image.html">
+<link rel="import" href="../bower_components/iron-icons/social-icons.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -36,7 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-
+<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
 
 <!-- Neon elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
@@ -59,7 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="../bower_components/polymer-themes/ice.html">
+<link rel="import" href="../bower_components/polymer-themes/candy.html">
 <link rel="import" href="signup-element/signup-element.html">
 <link rel="import" href="login-element/login-element.html">
 <link rel="import" href="user-element/user-element.html">
@@ -79,3 +80,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="slot-list/slot-list.html">
 <link rel="import" href="warning-dialog/warning-dialog.html">
 <link rel="import" href="appointment-list-docent/appointment-list-docent.html">
+<link rel="import" href="username-display/username-display.html">
