--- a/app/elements/loading-placeholder/loading-placeholder.html
+++ b/app/elements/loading-placeholder/loading-placeholder.html
@@ -25,7 +25,8 @@ Usage:
   <template attributes="data">
     <paper-card hidden={{!loadingStatus}} heading="Loading Data... please wait">
       <div class="card-content">
-        <paper-progress indeterminate></paper-progress>
+        <!-- <paper-progress indeterminate></paper-progress> -->
+        <paper-spinner active></paper-spinner>
       </div>
     </paper-card>
   </template>
