--- a/app/index.html
+++ b/app/index.html
@@ -69,57 +69,72 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <paper-scroll-header-panel drawer fixed>
 
         <!-- Drawer Toolbar -->
-        <paper-toolbar id="drawerToolbar">
+        <!-- <paper-toolbar id="drawerToolbar">
           <span class="paper-font-title">Menu</span>
-        </paper-toolbar>
+        </paper-toolbar> -->
+        <paper-header-panel mode="scroll" drawer>
+          <paper-toolbar id="navheader" class="tall">
+            <username-display class="bottom username"></username-display>
 
-        <!-- Drawer Content -->
-        <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
-          <a data-route="a-home" href="/">
-            <iron-icon icon="home"></iron-icon>
-            <span>Home</span>
-          </a>
+            <iron-image id="coverimage" placeholder="images/beach.jpg" sizing="cover" preload fade class="fit"></iron-image>
 
-          <a data-route="u-create-appointment" href="/uappc">
-            <iron-icon icon="info"></iron-icon>
-            <span>New Appoinment</span>
-          </a>
+          </paper-toolbar>
+          <!-- Drawer Content -->
+          <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
+            <a data-route="a-home" href="/">
+              <iron-icon icon="home"></iron-icon>
+              <span>Home</span>
+            </a>
+
+            <a data-route="u-create-appointment" href="/uappc">
+              <iron-icon icon="social:group-add"></iron-icon>
+              <span>New Appoinment</span>
+            </a>
 
 
-          <a data-route="u-overview-appointments" href="/uappov">
-            <iron-icon icon="mail"></iron-icon>
-            <span>Appoinment overview
-              <span>
-          </a>
+            <a data-route="u-overview-appointments" href="/uappov">
+              <iron-icon icon="perm-contact-calendar"></iron-icon>
+              <span>Appoinment overview
+                <span>
+            </a>
 
-          </hr>
-          </hr>
-          <a data-route="a-manage-profil" href="/amanagep">
-            <iron-icon icon="mail"></iron-icon>
-            <span>Profil verwalten
-              <span>
-          </a>
-          <a data-route="a-login" href="/ulogin">
-            <iron-icon icon="exit-to-app"></iron-icon>
-            <span>Login
-              <span>
+            </hr>
+            <a data-route="a-manage-profil" href="/amanagep">
+              <iron-icon icon="mail"></iron-icon>
+              <span>Profil verwalten
+                <span>
+            </a>
+            <template is="dom-if" if="{{currentUser(currentUser)}}">
+              <a class="pointer" onClick="javascript:Parse.User.logOut(); document.location.href = '/';">
+                <iron-icon icon="power-settings-new"></iron-icon>
+                <span>Logout
+                  <span>
 
-          </a>
-
-        </paper-menu>
+              </a>
+            </template>
+            <template is="dom-if" if="{{!currentUser(currentUser)}}" href="/ulogin">
+              <a class="pointer" data-route="u-login">
+                <iron-icon icon="power-settings-new"></iron-icon>
+                <span>Login</span>
+              </a>
+            </template>
+          </paper-menu>
       </paper-scroll-header-panel>
 
       <!-- Main Area -->
-      <paper-scroll-header-panel main condenses keep-condensed-header>
+      <paper-scroll-header-panel cover main condenses keep-condensed-header>
 
         <!-- Main Toolbar -->
         <paper-toolbar id="mainToolbar" class="tall">
+          <div id="crop" class="bottom" >
+          <iron-icon id="headericon" icon="polymer"></iron-icon>
+        </div>
           <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
           <span class="flex"></span>
 
           <!-- Toolbar icons -->
           <paper-icon-button icon="refresh" onclick="javascript:location.reload();"></paper-icon-button>
-          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut(); document.location.href = '/';"></paper-icon-button>
+          <paper-icon-button icon="icons:power-settings-new" onClick="javascript:Parse.User.logOut(); document.location.href = '/';"></paper-icon-button>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
@@ -152,7 +167,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <section data-route="u-appointment-overview">
 
               <template is="dom-if" if="{{isEqual(route, 'u-appointment-overview')}}" restamp="true">
-              <appointment-list-user></appointment-list-user>
+                <appointment-list-user></appointment-list-user>
 
               </template>
             </section>
@@ -173,23 +188,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </paper-scroll-header-panel>
     </paper-drawer-panel>
 
-    <!-- Uncomment next block to enable Service Worker support (1/2) -->
-    <!--
-    <paper-toast id="caching-complete"
-                 duration="6000"
-                 text="Caching complete! This app will work offline.">
-    </paper-toast>
-
-    <platinum-sw-register auto-register
-                          clients-claim
-                          skip-waiting
-                          on-service-worker-installed="displayInstalledToast">
-      <platinum-sw-cache default-cache-strategy="networkFirst"
-                         precache-file="precache.json">
-      </platinum-sw-cache>
-    </platinum-sw-register>
-    -->
-
   </template>
 
   <!-- build:js scripts/app.js -->
@@ -199,6 +197,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     app.isEqual = function(x, y) {
       return x === y;
     };
+    var currentUser = Parse.User.current();
+    app.currentUser = function(usr) {
+
+      if (currentUser != null) {
+        // console.log(usr);
+        return currentUser;
+      } else {
+
+        return null;
+
+      }
+    }
   </script>
   <!-- endbuild-->
 </body>
